--- a/lib/libkvm/kvm_read.3
+++ b/lib/libkvm/kvm_read.3
@@ -33,7 +33,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)kvm_read.3	5.1 (Berkeley) 05/26/92
+.\"     @(#)kvm_read.3	5.2 (Berkeley) 06/19/92
 .\"
 .Dd 
 .Dt KVM_READ 3
@@ -45,9 +45,9 @@
 .Sh SYNOPSIS
 .Fd #include <kvm.h>
 .Ft ssize_t
-.Fn kvm_read "const kvm_t *kd" "u_long addr" "char *buf" "size_t nbytes"
+.Fn kvm_read "kvm_t *kd" "u_long addr" "void *buf" "size_t nbytes"
 .Ft ssize_t
-.Fn kvm_write "const kvm_t *kd" "u_long addr" "char *buf" "size_t nbytes"
+.Fn kvm_write "kvm_t *kd" "u_long addr" "const void *buf" "size_t nbytes"
 .Sh DESCRIPTION
 The
 .Fn kvm_read
