--- a/usr.sbin/update/update.8
+++ b/usr.sbin/update/update.8
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)update.8	6.5 (Berkeley) 08/05/91
+.\"	@(#)update.8	6.6 (Berkeley) 06/22/92
 .\"
 .Dd 
 .Dt UPDATE 8
@@ -63,7 +63,7 @@ when the system goes multi-user.
 .Xr sync 8
 .Sh BUGS
 It is possible on some systems, that a
-.Xr syn
+.Xr sync
 occuring simultaneously with a crash may cause
 file system damage. See
 .Xr fsck 8 .
