--- a/lib/libc/sys/munmap.2
+++ b/lib/libc/sys/munmap.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)munmap.2	6.2 (Berkeley) 08/07/91
+.\"	@(#)munmap.2	6.3 (Berkeley) 06/23/92
 .\"
 .Dd 
 .Dt MUNMAP 2
@@ -38,7 +38,7 @@
 .Nm munmap
 .Nd remove a mapping
 .Sh SYNOPSIS
-.Fn munmap "caddr_t addr" "int len"
+.Fn munmap "caddr_t addr" "size_t len"
 .Sh DESCRIPTION
 The
 .Fn munmap
