--- a/bin/sync/sync.8
+++ b/bin/sync/sync.8
@@ -29,18 +29,18 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)sync.8	6.3 (Berkeley) 03/16/91
+.\"	@(#)sync.8	6.4 (Berkeley) 06/23/92
 .\"
 .Dd 
 .Dt SYNC 8
 .Os BSD 4
 .Sh NAME
 .Nm sync
-.Nd synchronize internal filesystem information with that on the disk
+.Nd force completion of pending disk writes (flush cache)
 .Sh SYNOPSIS
-.Nm /etc/sync
+.Nm sync
 .Sh DESCRIPTION
-.Xr Sync
+.Nm Sync
 can be called to insure that all disk writes have been completed before the
 processor is halted in a way not suitably done by
 .Xr reboot 8
@@ -54,9 +54,9 @@ to shut down the system,
 as they may perform additional actions
 such as resynchronizing the hardware clock
 and flushing internal caches before performing a final
-.Xr sync .
+.Nm sync .
 .Pp
-.Nm sync
+.Nm Sync
 utilizes the
 .Xr sync 2
 function call.
@@ -68,5 +68,6 @@ function call.
 .Xr update 8
 .Sh HISTORY
 A
-.Nm
-command appeared in Version 6 AT&T UNIX.
+.Nm sync
+command appeared in
+.At v6 .
