--- a/lib/libc/locale/ctype.3
+++ b/lib/libc/locale/ctype.3
@@ -30,7 +30,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)ctype.3	6.7 (Berkeley) 10/24/91
+.\"     @(#)ctype.3	6.8 (Berkeley) 06/23/92
 .\"
 .Dd 
 .Dt CTYPE 3
@@ -73,10 +73,11 @@
 .Fn tolower "int c"
 .Fn toupper "int c"
 .Sh DESCRIPTION
-The above fucntions perform character tests and conversions on the integer
+The above functions perform character tests and conversions on the integer
 .Ar c .
-They are available as macros, defined in the include file <ctype.h>, and
-as true functions in the C library.
+They are available as macros, defined in the include file
+.Aq Pa ctype.h ,
+or as true functions in the C library.
 See the specific manual pages for more information.
 .Sh SEE ALSO
 .Xr isalnum 3 ,
