--- a/lib/libc/sys/chown.2
+++ b/lib/libc/sys/chown.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)chown.2	6.7 (Berkeley) 03/10/91
+.\"     @(#)chown.2	6.8 (Berkeley) 06/27/92
 .\"
 .Dd 
 .Dt CHOWN 2
@@ -43,7 +43,7 @@
 .Ft int
 .Fn chown "const char *path" "uid_t owner" "gid_t group"
 .Ft int
-.Fn fchown "int fd" "int owner" "int group"
+.Fn fchown "int fd" "uid_t owner" "uid_t group"
 .Sh DESCRIPTION
 The owner ID and group ID of the file
 named by
