--- a/bin/cp/cp.1
+++ b/bin/cp/cp.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)cp.1	6.18 (Berkeley) 06/05/92
+.\"	@(#)cp.1	6.19 (Berkeley) 06/28/92
 .\"
 .Dd 
 .Dt CP 1
@@ -110,7 +110,7 @@ the file is copied if permissions allow the copy.
 Causes
 .Nm cp
 to preserve in the copy as many of the modification time, access time,
-file mode, user ID, and group ID as allowed by permissions.
+file flags, file mode, user ID, and group ID as allowed by permissions.
 .Pp
 If the user ID and group ID cannot be preserved, no error message
 is displayed and the exit value is not altered.
