--- a/usr.bin/xinstall/install.1
+++ b/usr.bin/xinstall/install.1
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)install.1	6.12 (Berkeley) 06/28/92
+.\"     @(#)install.1	6.13 (Berkeley) 06/29/92
 .\"
 .Dd 
 .Dt INSTALL 1
@@ -89,7 +89,8 @@ utility attempts to prevent moving a file onto itself.
 .Pp
 The
 .Nm install
-utility always attempts to preserve the file flags.
+utility always attempts to preserve the file flags with the exception
+of the NODUMP flag which is always turned off.
 .Pp
 Installing
 .Pa /dev/null
