--- a/old/mount_lofs/mount_lofs.8
+++ b/old/mount_lofs/mount_lofs.8
@@ -34,7 +34,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)mount_lofs.8	5.1 (Berkeley) 07/05/92
+.\"	@(#)mount_lofs.8	5.2 (Berkeley) 07/05/92
 .\"
 .\"
 .Dd 
@@ -45,6 +45,7 @@
 .Nd mount a virtual copy of an existing filesystem sub-tree
 .Sh SYNOPSIS
 .Nm mount_lofs
+.Op Fl F Ar fsoptions
 .Ar target mount-point
 .Sh DESCRIPTION
 The
