--- a/usr.bin/hexdump/hexdump.1
+++ b/usr.bin/hexdump/hexdump.1
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)hexdump.1	5.13 (Berkeley) 12/30/91
+.\"	@(#)hexdump.1	5.14 (Berkeley) 07/14/92
 .\"
 .Dd 
 .Dt HEXDUMP 1
@@ -176,8 +176,8 @@ character (unlike the
 .Xr fprintf 3
 default which prints the entire string if the precision is unspecified).
 .It
-The conversion characters ``h'', ``n'', and ``p'' are not
-supported.
+The conversion characters ``h'', ``l'', ``n'', ``p'' and ``q'' are
+not supported.
 .It
 The single character escape sequences
 described in the C standard are supported:
@@ -246,7 +246,7 @@ One byte counts only.
 .Li \&%d , \&%i , \&%o ,
 .Li \&%u , \&%X , \&%x 
 .Xc
-Four byte default, one and two byte counts supported.
+Four byte default, one, two and four byte counts supported.
 .It Xo
 .Li \&%E , \&%e , \&%f ,
 .Li \&%G , \&%g 
