--- a/share/man/man4/termios.4
+++ b/share/man/man4/termios.4
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)termios.4	5.2 (Berkeley) 07/12/92
+.\"	@(#)termios.4	5.3 (Berkeley) 07/14/92
 .\"
 .Dd 
 .Dt TERMIOS 4
@@ -618,7 +618,7 @@ character.
 The following special characters are extensions defined by this
 system and are not a part of 1003.1 termios.
 .Bl -tag -width indent
-.It Dv EOL2	
+.It Dv EOL2
 Secondary
 .Dv EOL
 character.  Same function as
@@ -1010,7 +1010,7 @@ the following masks.
 Not all values
 specified are supported by all hardware.
 .Pp
-.Bl -tag -width CRTS_IFLOW -offset indent -compact
+.Bl -tag -width CRTSXIFLOW -offset indent -compact
 .It Dv CSIZE
 /* character size mask */
 .It Dv CS5
