--- a/lib/libc/gen/getloadavg.3
+++ b/lib/libc/gen/getloadavg.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)getloadavg.3	6.3 (Berkeley) 04/19/91
+.\"     @(#)getloadavg.3	6.4 (Berkeley) 07/22/92
 .\"
 .Dd 
 .Dt GETLOADAVG 3
@@ -60,8 +60,8 @@ the number of samples actually retrieved is returned.
 .Sh HISTORY
 The
 .Fn getloadavg
-function is
-.Ud .
+function appeared in
+.Bx 4.3 Reno .
 .Sh BUGS
 Programs using this utility must have read permission on
 .Pa /dev/kmem .
