--- a/usr.bin/time/time.1
+++ b/usr.bin/time/time.1
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)time.1	6.4 (Berkeley) 04/23/91
+.\"     @(#)time.1	6.5 (Berkeley) 07/23/92
 .\"
 .Dd 
 .Dt TIME 1
@@ -78,7 +78,7 @@ has its own and syntactically different builtin version of
 .Nm time.
 The command described here
 is available as
-.Pa /bin/time
+.Pa /usr/bin/time
 to
 .Xr csh
 users.
