--- a/lib/libc/stdio/printf.3
+++ b/lib/libc/stdio/printf.3
@@ -33,7 +33,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)printf.3	6.15 (Berkeley) 06/02/92
+.\"     @(#)printf.3	6.16 (Berkeley) 07/23/92
 .\"
 .Dd 
 .Dt PRINTF 3
@@ -150,7 +150,7 @@ and some of the printed characters were discarded.
 .Fn Sprintf
 and
 .Fn vsprintf
-effectively assume an infinte
+effectively assume an infinite
 .Fa size .
 .Pp
 The format string is composed of zero or more directives:
