--- a/usr.bin/chflags/chflags.1
+++ b/usr.bin/chflags/chflags.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)chflags.1	5.2 (Berkeley) 05/28/92
+.\"	@(#)chflags.1	5.3 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt CHFLAGS 1
@@ -107,6 +107,7 @@ For example:
 nodump       the file should never be dumped
 .Ed
 .Sh SEE ALSO
+.Xr symlink 1,
 .Xr chflags 2 ,
 .Xr stat 2 ,
 .Xr fts 3
