--- a/usr.sbin/chown/chown.8
+++ b/usr.sbin/chown/chown.8
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)chown.8	6.8 (Berkeley) 06/01/92
+.\"     @(#)chown.8	6.9 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt CHOWN 8
@@ -108,6 +108,7 @@ group names may contain the dot character.
 .Sh SEE ALSO
 .Xr chgrp 1 ,
 .Xr find 1 ,
+.Xr symlink 1 ,
 .Xr chown 2 ,
 .Xr fts 3
 .Sh STANDARDS
