--- a/bin/chmod/chmod.1
+++ b/bin/chmod/chmod.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)chmod.1	6.16 (Berkeley) 06/01/92
+.\"	@(#)chmod.1	6.17 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt CHMOD 1
@@ -248,6 +248,7 @@ There's no
 option for the naughty bits.
 .Sh SEE ALSO
 .Xr install 1 ,
+.Xr symlink 1 ,
 .Xr chmod 2 ,
 .Xr stat 2 ,
 .Xr umask 2 ,
