--- a/usr.bin/find/find.1
+++ b/usr.bin/find/find.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)find.1	6.31 (Berkeley) 06/01/92
+.\"	@(#)find.1	6.32 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt FIND 1
@@ -379,7 +379,7 @@ that are newer than ``ttt''.
 .Sh SEE ALSO
 .Xr chmod 1 ,
 .Xr locate 1 ,
-.Xr test 1 ,
+.Xr symlink 1 ,
 .Xr stat 2 ,
 .Xr getpwent 3 ,
 .Xr getgrent 3 ,
