--- a/bin/ls/ls.1
+++ b/bin/ls/ls.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)ls.1	6.23 (Berkeley) 03/09/92
+.\"     @(#)ls.1	6.24 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt LS 1
@@ -313,6 +313,7 @@ files in order to be compatible with the
 specification.
 .Sh SEE ALSO
 .Xr chmod 1 ,
+.Xr symlink 1 ,
 .Xr sticky 8
 .Sh HISTORY
 A
