--- a/bin/mv/mv.1
+++ b/bin/mv/mv.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)mv.1	6.9 (Berkeley) 07/27/91
+.\"	@(#)mv.1	6.10 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt MV 1
@@ -120,6 +120,7 @@ The
 utility exits 0 on success, and >0 if an error occurs.
 .Sh SEE ALSO
 .Xr cp 1
+.Xr symlink 1
 .Sh STANDARDS
 The
 .Nm mv
