--- a/bin/rm/rm.1
+++ b/bin/rm/rm.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)rm.1	6.9 (Berkeley) 07/27/91
+.\"	@(#)rm.1	6.10 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt RM 1
@@ -115,6 +115,7 @@ If an error occurs,
 exits with a value >0.
 .Sh SEE ALSO
 .Xr rmdir 1 ,
+.Xr symlink 1 ,
 .Xr unlink 2 ,
 .Xr fts 3
 .Sh COMPATIBILITY
