--- a/old/tar/tar.1
+++ b/old/tar/tar.1
@@ -5,7 +5,7 @@
 .\" Use and redistribution is subject to the Berkeley Software License
 .\" Agreement and your Software Agreement with AT&T (Western Electric).
 .\"
-.\"	@(#)tar.1	6.12 (Berkeley) 06/01/92
+.\"	@(#)tar.1	6.13 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt TAR 1
@@ -187,6 +187,7 @@ inability to properly handle blocked archives have been lifted.
 .It Pa /tmp/tar*
 .El
 .Sh SEE ALSO
+.Xr symlink 1 ,
 .Xr tar 5 ,
 .Xr format 5
 .Sh DIAGNOSTICS
