--- a/lib/libc/sys/readlink.2
+++ b/lib/libc/sys/readlink.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)readlink.2	6.8 (Berkeley) 03/10/91
+.\"     @(#)readlink.2	6.9 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt READLINK 2
@@ -88,6 +88,7 @@ extends outside the process's allocated address space.
 .Xr stat 2 ,
 .Xr lstat 2 ,
 .Xr symlink 2
+.Xr symlink 7 ,
 .Sh HISTORY
 The
 .Nm
