--- a/lib/libc/sys/rename.2
+++ b/lib/libc/sys/rename.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)rename.2	6.7 (Berkeley) 03/10/91
+.\"     @(#)rename.2	6.8 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt RENAME 2
@@ -192,6 +192,7 @@ is a directory and is not empty.
 .El
 .Sh SEE ALSO
 .Xr open 2
+.Xr symlink 7
 .Sh STANDARDS
 .Fn Rename
 conforms to IEEE Std 1003.1-1988
