--- a/lib/libc/sys/unlink.2
+++ b/lib/libc/sys/unlink.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)unlink.2	6.3 (Berkeley) 03/10/91
+.\"     @(#)unlink.2	6.4 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt UNLINK 2
@@ -105,6 +105,7 @@ points outside the process's allocated address space.
 .Xr close 2 ,
 .Xr link 2 ,
 .Xr rmdir 2
+.Xr symlink 7
 .Sh HISTORY
 An
 .Nm
