--- a/lib/libc/sys/stat.2
+++ b/lib/libc/sys/stat.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)stat.2	6.9 (Berkeley) 03/10/91
+.\"     @(#)stat.2	6.10 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt STAT 2
@@ -225,6 +225,7 @@ depend on the time stamps being contiguous (in calls to
 .Xr chmod 2 ,
 .Xr chown 2 ,
 .Xr utimes 2
+.Xr symlink 7
 .Sh BUGS
 Applying
 .Xr fstat
