--- a/bin/rm/rm.1
+++ b/bin/rm/rm.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)rm.1	6.10 (Berkeley) 07/27/92
+.\"	@(#)rm.1	6.11 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt RM 1
@@ -115,9 +115,9 @@ If an error occurs,
 exits with a value >0.
 .Sh SEE ALSO
 .Xr rmdir 1 ,
-.Xr symlink 1 ,
 .Xr unlink 2 ,
-.Xr fts 3
+.Xr fts 3 ,
+.Xr symlink 7
 .Sh COMPATIBILITY
 The
 .Nm rm
