on second thought, make it symlink(7)
SCCS-vsn: 6.21

--- a/bin/cp/cp.1
+++ b/bin/cp/cp.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)cp.1	6.20 (Berkeley) 07/27/92
+.\"	@(#)cp.1	6.21 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt CP 1
@@ -171,9 +171,9 @@ exits 0 on success, >0 if an error occurred.
 .Sh SEE ALSO
 .Xr mv 1 ,
 .Xr rcp 1 ,
-.Xr symlink 1 ,
 .Xr umask 2 , 
-.Xr fts 3
+.Xr fts 3 ,
+.Xr symlink 7
 .Sh HISTORY
 The
 .Nm cp
