--- a/usr.sbin/chown/chgrp.1
+++ b/usr.sbin/chown/chgrp.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)chgrp.1	6.9 (Berkeley) 07/27/92
+.\"     @(#)chgrp.1	6.10 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt CHGRP 1
@@ -105,12 +105,12 @@ utility exits 0 on success, and >0 if an error occurs.
 Group ID file
 .El
 .Sh SEE ALSO
-.Xr symlink 1 ,
 .Xr chown 2 ,
 .Xr chown 8 ,
 .Xr group 5 ,
 .Xr passwd 5 ,
-.Xr fts 3
+.Xr fts 3 ,
+.Xr symlink 7
 .Sh STANDARDS
 The
 .Nm chgrp
