on second thought, make it symlink(7)
SCCS-vsn: 6.10

--- a/usr.sbin/chown/chown.8
+++ b/usr.sbin/chown/chown.8
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)chown.8	6.9 (Berkeley) 07/27/92
+.\"     @(#)chown.8	6.10 (Berkeley) 07/27/92
 .\"
 .Dd 
 .Dt CHOWN 8
@@ -108,9 +108,9 @@ group names may contain the dot character.
 .Sh SEE ALSO
 .Xr chgrp 1 ,
 .Xr find 1 ,
-.Xr symlink 1 ,
 .Xr chown 2 ,
-.Xr fts 3
+.Xr fts 3 ,
+.Xr symlink 7
 .Sh STANDARDS
 The
 .Nm chown
