--- a/lib/libc/compat-43/sigsetmask.2
+++ b/lib/libc/compat-43/sigsetmask.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)sigsetmask.2	6.7 (Berkeley) 03/10/91
+.\"     @(#)sigsetmask.2	6.8 (Berkeley) 07/28/92
 .\"
 .Dd 
 .Dt SIGSETMASK 2
@@ -38,7 +38,7 @@
 .Nm sigsetmask
 .Nd set current signal mask
 .Sh SYNOPSIS
-.Fd #include <sys/signal.h>
+.Fd #include <signal.h>
 .Ft int
 .Fn sigsetmask "int mask"
 .Fn sigmask signum
