include <signal.h>, not <sys/signal.h>
SCCS-vsn: 6.6

--- a/lib/libc/compat-43/killpg.2
+++ b/lib/libc/compat-43/killpg.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)killpg.2	6.5 (Berkeley) 03/10/91
+.\"     @(#)killpg.2	6.6 (Berkeley) 07/28/92
 .\"
 .Dd 
 .Dt KILLPG 2
@@ -38,7 +38,7 @@
 .Nm killpg
 .Nd send signal to a process group
 .Sh SYNOPSIS
-.Fd #include <sys/signal.h>
+.Fd #include <signal.h>
 .Ft int
 .Fn killpg "pid_t pgrp" "int sig"
 .Sh DESCRIPTION
