--- a/lib/libc/compat-43/sigblock.2
+++ b/lib/libc/compat-43/sigblock.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)sigblock.2	6.7 (Berkeley) 03/10/91
+.\"     @(#)sigblock.2	6.8 (Berkeley) 07/28/92
 .\"
 .Dd 
 .Dt SIGBLOCK 2
@@ -38,7 +38,7 @@
 .Nm sigblock
 .Nd block signals
 .Sh SYNOPSIS
-.Fd #include <sys/signal.h>
+.Fd #include <signal.h>
 .Ft int
 .Fn sigblock "int mask"
 .Ft int
