--- a/lib/libc/compat-43/sigpause.2
+++ b/lib/libc/compat-43/sigpause.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)sigpause.2	6.6 (Berkeley) 03/10/91
+.\"     @(#)sigpause.2	6.7 (Berkeley) 07/28/92
 .\"
 .Dd 
 .Dt SIGPAUSE 2
@@ -38,7 +38,7 @@
 .Nm sigpause
 .Nd atomically release blocked signals and wait for interrupt
 .Sh SYNOPSIS
-.Fd #include <sys/signal.h>
+.Fd #include <signal.h>
 .Ft int
 .Fn sigpause "int sigmask"
 .Sh DESCRIPTION
