--- a/lib/libc/sys/sigreturn.2
+++ b/lib/libc/sys/sigreturn.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)sigreturn.2	6.5 (Berkeley) 03/10/91
+.\"     @(#)sigreturn.2	6.6 (Berkeley) 07/28/92
 .\"
 .Dd 
 .Dt SIGRETURN 2
@@ -38,7 +38,7 @@
 .Nm sigreturn
 .Nd return from signal
 .Sh SYNOPSIS
-.Fd #include <sys/signal.h>
+.Fd #include <signal.h>
 .Bd -literal
 struct sigcontext {
 	int sc_onstack;
