--- a/lib/libc/sys/kill.2
+++ b/lib/libc/sys/kill.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)kill.2	6.7 (Berkeley) 10/09/91
+.\"     @(#)kill.2	6.8 (Berkeley) 07/28/92
 .\"
 .Dd 
 .Dt KILL 2
@@ -38,7 +38,7 @@
 .Nm kill
 .Nd send signal to a process
 .Sh SYNOPSIS
-.Fd #include <sys/signal.h>
+.Fd #include <signal.h>
 .Ft int
 .Fn kill "pid_t pid" "int sig"
 .Sh DESCRIPTION
