--- a/lib/libc/gen/psignal.3
+++ b/lib/libc/gen/psignal.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)psignal.3	6.2 (Berkeley) 04/19/91
+.\"     @(#)psignal.3	6.3 (Berkeley) 07/28/92
 .\"
 .Dd 
 .Dt PSIGNAL 3
@@ -39,7 +39,7 @@
 .Nm sys_siglist
 .Nd system signal messages
 .Sh SYNOPSIS
-.Fd #include <sys/signal.h>
+.Fd #include <signal.h>
 .Ft void
 .Fn psignal "unsigned sig" "const char *s"
 .Vt extern char *sys_siglist[];
