--- a/bin/sh/sh.1
+++ b/bin/sh/sh.1
@@ -32,7 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)sh.1	5.5 (Berkeley) 07/17/92
+.\"	@(#)sh.1	5.6 (Berkeley) 07/31/92
 .\"
 .na
 .TH SH 1
@@ -60,7 +60,7 @@ specification of the shell.
 .LP
 The shell is a command that reads lines from
 either a file or the terminal, interpretes them, and 
-generally executes commands.  It is the program that is running
+generally executes other commands.  It is the program that is running
 when a user logs into the system (although a user can select
 a different shell with the chsh(1) command).
 The shell 
