--- a/sbin/newfs/newfs.8
+++ b/sbin/newfs/newfs.8
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)newfs.8	6.11 (Berkeley) 05/28/92
+.\"     @(#)newfs.8	6.12 (Berkeley) 08/20/92
 .\"
 .Dd 
 .Dt NEWFS 8
@@ -219,6 +219,7 @@ command.
 .Sh SEE ALSO
 .Xr disktab 5 ,
 .Xr fs 5 ,
+.Xr dumpfs 8 ,
 .Xr disklabel 8 ,
 .Xr diskpart 8 ,
 .Xr fsck 8 ,
