Deleted references to vtroff and added ref's to getcap(3).
SCCS-vsn: 6.5

--- a/usr.bin/vgrind/vgrind.1
+++ b/usr.bin/vgrind/vgrind.1
@@ -29,9 +29,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)vgrind.1	6.4 (Berkeley) 04/23/91
+.\"     @(#)vgrind.1	6.5 (Berkeley) 8/6/92
 .\"
-.Dd 
+.Dd August 6, 1992
 .Dt VGRIND 1
 .Os BSD 4
 .Sh NAME
@@ -174,8 +174,7 @@ preprocessor
 language descriptions
 .El
 .Sh SEE ALSO
-.Xr vlp 1 ,
-.Xr vtroff 1 ,
+.Xr getcap 3 ,
 .Xr vgrindefs 5
 .Sh BUGS
 Vfontedpr assumes that a certain programming style is followed:
