name is _exit, not exit
SCCS-vsn: 6.7

--- a/lib/libc/sys/_exit.2
+++ b/lib/libc/sys/_exit.2
@@ -29,10 +29,10 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)_exit.2	6.6 (Berkeley) 07/25/91
+.\"     @(#)_exit.2	6.7 (Berkeley) 09/02/92
 .\"
 .Dd 
-.Dt EXIT 2
+.Dt _EXIT 2
 .Os BSD 4
 .Sh NAME
 .Nm _exit
