--- a/lib/libc/sys/getpgrp.2
+++ b/lib/libc/sys/getpgrp.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)getpgrp.2	6.6 (Berkeley) 08/01/92
+.\"     @(#)getpgrp.2	6.7 (Berkeley) 10/01/92
 .\"
 .Dd 
 .Dt GETPGRP 2
@@ -38,6 +38,7 @@
 .Nm getpgrp
 .Nd get process group
 .Sh SYNOPSIS
+.Fd #include <unistd.h>
 .Ft pid_t
 .Fn getpgrp "void"
 .Sh DESCRIPTION
