--- a/lib/libc/sys/intro.2
+++ b/lib/libc/sys/intro.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)intro.2	6.13 (Berkeley) 07/23/91
+.\"     @(#)intro.2	6.14 (Berkeley) 10/04/92
 .\"
 .Dd 
 .Dt INTRO 2
@@ -38,7 +38,7 @@
 .Nm intro
 .Nd introduction to system calls and error numbers
 .Sh SYNOPSIS
-.Fd #include <sys/errno.h>
+.Fd #include <errno.h>
 .Sh DESCRIPTION
 This section provides an overview of the system calls,
 their error returns, and other common definitions and concepts.
