--- a/lib/libc/db/man/dbopen.3
+++ b/lib/libc/db/man/dbopen.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)dbopen.3	5.21 (Berkeley) 05/15/92
+.\"	@(#)dbopen.3	5.22 (Berkeley) 10/04/92
 .\"
 .TH DBOPEN 3 ""
 .UC 7
@@ -76,7 +76,8 @@ and
 are as specified to the
 .IR open (2)
 routine, however, only the O_CREAT, O_EXCL, O_EXLOCK, O_RDONLY, O_RDWR,
-O_SHLOCK, O_TRUNC and O_WRONLY flags are meaningful.
+O_SHLOCK and O_TRUNC flags are meaningful.
+(Note, opening a database file O_WRONLY is not possible.)
 .PP
 The
 .I type
