--- a/usr.bin/mail/mail.1
+++ b/usr.bin/mail/mail.1
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)mail.1	6.19 (Berkeley) 07/27/91
+.\"	@(#)mail.1	6.20 (Berkeley) 11/17/92
 .\"
 .Dd 
 .Dt MAIL 1
@@ -878,6 +878,10 @@ and
 commands.
 .It Ar quiet
 Suppresses the printing of the version when first invoked.
+.It Ar searchheaders
+If this option is set, then a message-list specifier in the form ``/x:y''
+will expand to all messages containing the substring ``y'' in the header
+field ``x''.  The string search is case insensitive.
 .It Ar verbose
 Setting the option
 .Ar verbose
