--- a/lib/libc/sys/mmap.2
+++ b/lib/libc/sys/mmap.2
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	@(#)mmap.2	6.4 (Berkeley) 06/21/92
+.\"	@(#)mmap.2	6.5 (Berkeley) 11/24/92
 .\"
 .Dd ""
 .Dt MMAP 2
@@ -107,8 +107,8 @@ The file descriptor used for creating
 regions is used only for
 naming, and may be specified as \-1 if no name is associated with the
 region.
-.It Dv MAP_FILE
-Mapped from a regular file or character-special device memory.
+\.".It Dv MAP_FILE
+\."Mapped from a regular file or character-special device memory.
 .It Dv MAP_FIXED
 Do not permit the system to select a different address than the one
 specified.
