--- a/lib/libc/string/strdup.3
+++ b/lib/libc/string/strdup.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)strdup.3	5.3 (Berkeley) 04/19/91
+.\"     @(#)strdup.3	5.4 (Berkeley) 12/02/92
 .\"
 .Dd 
 .Dt STRDUP 3
@@ -52,10 +52,10 @@ does the copy, and returns a pointer to it.
 The pointer may subsequently be used as an
 argument to the function
 .Xr free 3 .
+.Pp
+If insufficient memory is available, NULL is returned.
 .Sh SEE ALSO
-.Xr calloc 3
 .Xr malloc 3
-.Xr realloc 3
 .Xr free 3
 .Sh HISTORY
 The
