--- a/usr.sbin/sendmail/makemap/makemap.8
+++ b/usr.sbin/sendmail/makemap/makemap.8
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)makemap.8	5.1 (Berkeley) 11/16/92
+.\"     @(#)makemap.8	5.2 (Berkeley) 12/12/92
 .\"
 .TH MAKEMAP 8 November\ 16,\ 1992
 .UC 6
@@ -39,6 +39,8 @@ makemap \- create database maps for sendmail
 .B makemap
 [
 \-N
+] [
+\-f
 ] [
 \-o
 ] [
@@ -96,6 +98,14 @@ Include the null byte that terminates strings
 in the map.
 This must match the \-N flag in the sendmail.cf
 ``K'' line.
+.IP \-f
+Fold all upper case letters in the key
+to lower case;
+this is intended to mesh with the
+\-f flag in the
+.B K
+line in sendmail.cf.
+The value is not case folded.
 .IP \-o
 Append to an old file.
 This allows you to augment an existing file.
